# GameEngine

./: .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  vcpkg.json
Game/: CMakeLists.txt
Game/src/: CollisionSystem.h  Components.cppm  Components.h  DeathByYSystem.cpp  DestructionNotificationSystem.h  EnemySpawningSystem.cpp  EnemySpawningSystem.h  Game.cpp  Game.cppm  Game.h  GravitySystem.cppm  GravitySystem.h  LifetimeSystem.cppm  LifetimeSystem.h  MovementSystem.cppm  MovementSystem.h  PlayerSystem.cpp  Rand.cppm  Rand.h  SpriteRenderingSystem.cppm  SpriteRenderingSystem.h  main.cpp
Mage/: CMakeLists.txt
Mage/src/Mage/: Mage.cppm  Mage.h
Mage/src/Mage/Core/: Api.h  Application.cpp  Application.cppm  Application.h  Application.impl.cppm  Color.cpp  Color.h  Common.h  Core.cpp  Core.h  EventEnums.h  EventListenerBase.h  EventManager.cpp  EventManager.h  Exception.cpp  Exception.h  ICopyDisable.h  Log.cpp  Log.h  Window.cpp  Window.cppm  Window.h  Window.impl.cppm  pch.h
Mage/src/Mage/ECS/: ComponentManager.Impl.cppm  ComponentManager.cppm  ComponentManager.impl.cppm  ComponentVector.cppm  Entity.cppm  EntityList.cppm  EntityManager.Impl.cppm  EntityManager.cppm  EntityManager.impl.cppm  EntityManager_impl.cppm  System.Impl.cppm  System.cppm  System.impl.cppm  SystemList.cppm  SystemManager.Impl.cppm  SystemManager.cppm  SystemManager.impl.cppm  _ECS.cppm
Mage/src/Mage/Events/: EventEnums.cppm  EventListenerBase.cppm  EventManager.cpp  EventManager.cppm  EventManager.impl.cppm  _Events.cppm
Mage/src/Mage/IO/: Controller.cpp  Controller.h
Mage/src/Mage/Renderer/: Camera.cppm  Camera.h  Font.cpp  Font.h  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.cppm  SpriteRenderer.h  SpriteRenderer.impl.cppm  TextRenderer.cpp  TextRenderer.h
Mage/src/Mage/Scene/: ComponentManager.cpp  ComponentManager.h  ComponentVector.h  Entity.h  EntityList.cpp  EntityList.h  EntityManager.cpp  EntityManager.h  Scene.h  System.cpp  System.h  SystemList.cpp  SystemList.h  SystemManager.cpp  SystemManager.h
cmake/: NormalizeCompileCommands.cmake
